# RPIPicoTempSensorOpts

./: .gitmodules  CMakeLists.txt  README.md  ahtxx_import.cmake
src/: CMakeLists.txt  files.cmake  main.cpp
test/: CMakeLists.txt  TestAHT10.cpp  TestDS18B20.cpp  TestDS3231.cpp  TestInternal.cpp  test_main.cpp
